On P8 BE machine, I encounter a build failure. libgo/runtime/go-signal.c:236:59: error: 'union uc_regs_ptr' has no member named 'gregs'; did you mean 'regs'? 236 | ret.sigpc = ((ucontext_t*)(context))->uc_mcontext.gregs[32]; The machine is: Architecture: ppc64 CPU op-mode(s): 32-bit, 64-bit Byte Order: Big Endian Model name: POWER8 (architected), altivec supported reproduce command: $GCC_SRC/configure --enable-languages=c,c++,go --with-cpu=native --with-long-double-128 --prefix=~/install/gcc-mainline-base make -j 30 It may be the commit "r12-8168 af27d545dc6132dcd67d1ee854372ea9cfd2a225" which cause this issue.
The failure compiling command is about -m32: /home/guojiufu/gcc/build/gcc-mainline-base/./gcc/xgcc -B/home/guojiufu/gcc/build/gcc-mainline-base/./gcc/ -B/home/guojiufu/gcc/install/gcc-mainline-base/powerpc64-unknown-linux-gnu/bin/ -B/home/guojiufu/gcc/install/gcc-mainline-base/powerpc64-unknown-linux-gnu/lib/ -isystem /home/guojiufu/gcc/install/gcc-mainline-base/powerpc64-unknown-linux-gnu/include -isystem /home/guojiufu/gcc/install/gcc-mainline-base/powerpc64-unknown-linux-gnu/sys-include -m32 -DHAVE_CONFIG_H -I. -I/home/guojiufu/gcc/gcc-mainline-base/libgo -I /home/guojiufu/gcc/gcc-mainline-base/libgo/runtime -I/home/guojiufu/gcc/gcc-mainline-base/libgo/../libffi/include -I../libffi/include -pthread -L../libatomic/.libs -fexceptions -fnon-call-exceptions -Wall -Wextra -Wwrite-strings -Wcast-qual -Werror -D_GNU_SOURCE -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -I /home/guojiufu/gcc/gcc-mainline-base/libgo/../libgcc -I /home/guojiufu/gcc/gcc-mainline-base/libgo/../libbacktrace -I ../../../gcc/include -g -O2 -m32 -MT runtime/go-signal.lo -MD -MP -MF runtime/.deps/go-signal.Tpo -c /home/guojiufu/gcc/gcc-mainline-base/libgo/runtime/go-signal.c -fPIC -DPIC -o runtime/.libs/go-signal.o
The master branch has been updated by Ian Lance Taylor <ian@gcc.gnu.org>: https://gcc.gnu.org/g:6a4e9934545c112eef5eb7248636baa96cbfd2c0 commit r12-8210-g6a4e9934545c112eef5eb7248636baa96cbfd2c0 Author: Ian Lance Taylor <iant@golang.org> Date: Wed Apr 20 14:22:41 2022 -0700 runtime: use correct field name for PPC32 GLIBC registers One of these days we will get this right. Fixes PR go/105315 Reviewed-on: https://go-review.googlesource.com/c/gofrontend/+/401374
Thanks, should be fixed now, I hope.
(In reply to Ian Lance Taylor from comment #3) > Thanks, should be fixed now, I hope. As tested, 'go' build pass on that machine now. Thanks!